# Scuzzy-goalkeeper

./: .env.example  .env.template  .firebaserc  .gitignore  AVAILABILITY_FEATURE.md  EMAIL_SYSTEM_FIX.md  FOOTBALL_THEME_PLAN.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  PR.md  README.md  REAL_DATA_IMPLEMENTATION.md  STOP_SUPABASE_EMAILS_NOW.md  USER_STORIES.md  attempts_to_fix.md  build.sh  pr.md  pubspec.yaml  qq  requirements.md  system_prompt.md  task.md  test_location_feature.md  test_signup.md
android/: gradle.properties
email-service/: .env.example  DEPLOYMENT.md  README.md  TASK_10_COMPLETION.md  TASK_7_VERIFICATION.md  TASK_9_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml
email-service/app/: __init__.py  config.py
email-service/app/clients/: __init__.py  azure_client.py
email-service/app/models/: __init__.py  auth_code.py  azure.py  requests.py  responses.py
email-service/app/repositories/: __init__.py  auth_code_repository.py
email-service/app/services/: __init__.py  auth_code_service.py  email_service.py  template_manager.py
email-service/app/utils/: __init__.py  logging.py  middleware.py
email-service/deploy/: .env.production  deploy_app.sh  email-service.service  maintenance.sh  nginx.conf  setup_vm.sh
email-service/email-service/app/utils/: logging.py  metrics.py
email-service/templates/: confirm_signup_template.html  reset_password_template.html
email-service/tests/: __init__.py  test_api_endpoints.py  test_auth_code_repository.py  test_auth_code_repository_integration.py  test_email_service_integration.py  test_email_service_unit.py  test_http_integration.py  test_server_startup.py  test_task_13_end_to_end.py  test_task_9_logging_monitoring.py  test_template_manager.py  validate_models.py  validate_repository.py  verify_implementation.py
(+401 files in other folders)
